--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <div class="canvas-wrap">
         <canvas id="game" width="600" height="600"></canvas>
 
-        <h3>Loading...</h3>
+        <h3 id="loading">Loading...</h3>
         <div class="border">
           <div class="top-left"></div>
           <div class="top"></div>
