Fix form listener

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
               <input class="input" type="text" name="name" id="name">
             </div>
             <div class="row">
-              <button class="btn" id="startGame">
+              <button type="submit" class="btn" id="startGame">
                 START GAME
               </button>
             </div>
